[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies.chess]
path = "../chess"

[dependencies.engine]
path = "../engine"

[dependencies]
anyhow = "1.0.42"
futures = "0.3.15"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.8.1", features = ["macros", "rt"]}
tokio-stream = "0.1.7"
warp = "0.3.1"