[package]
name = "server"
version = "1.0.0"
edition = "2018"

[dependencies.chess]
path = "../chess"

[dependencies.engine]
path = "../engine"

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
futures = "0.3.15"
log = "0.4.14"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
simple_logger = "1.11.0"
tokio = {version = "1.8.1", features = ["macros", "rt"]}
tokio-stream = "0.1.7"
warp = {version = "0.3.1", features = ["compression"]}